--- a/src/main/resources/mainForm.fxml
+++ b/src/main/resources/mainForm.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="424.0" prefWidth="665.0" stylesheets="@mainForm.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="live.daniel.TaskManager.mainForm">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="424.0" prefWidth="665.0" stylesheets="@mainForm.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="live.daniel.TaskManager.controllers.mainForm">
    <top>
       <VBox BorderPane.alignment="CENTER">
          <children>
@@ -43,9 +43,8 @@
                      </HBox.margin>
                   </Button>
                   <Button fx:id="addTask" mnemonicParsing="false" onAction="#setAddTask" text="Add task" />
-                  <Region prefHeight="25.0" prefWidth="55.0" HBox.hgrow="ALWAYS" />
-                  <Button fx:id="delTask" layoutX="308.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="84.0" text="Delete task" />
                   <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="55.0" text="Start" />
+                  <Region prefHeight="25.0" prefWidth="55.0" HBox.hgrow="ALWAYS" />
                   <TextField fx:id="tfl" prefHeight="25.0" prefWidth="129.0" promptText="Name">
                      <HBox.margin>
                         <Insets />
@@ -53,6 +52,7 @@
                   </TextField>
                   <Button fx:id="addSizeProc" mnemonicParsing="false" onAction="#setSizeProc" prefHeight="25.0" prefWidth="111.0" text="Count processors" />
                   <TextField fx:id="sizeProc" layoutX="10.0" layoutY="10.0" prefHeight="25.0" prefWidth="25.0" />
+                  <Button fx:id="delTask" layoutX="308.0" layoutY="10.0" mnemonicParsing="false" onAction="#setDelTask" prefHeight="25.0" prefWidth="84.0" text="Delete task" />
                </children>
                <VBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
