--- a/src/main/resources/fxml/editTask.fxml
+++ b/src/main/resources/fxml/editTask.fxml
@@ -12,18 +12,12 @@
          <children>
             <Region prefHeight="19.0" prefWidth="100.0" />
             <Label text="Time activation">
-               <font>
-                  <Font size="14.0" />
-               </font>
                <VBox.margin>
                   <Insets left="5.0" />
                </VBox.margin>
             </Label>
             <Region layoutX="10.0" layoutY="10.0" prefHeight="22.0" prefWidth="100.0" />
             <Label prefHeight="20.0" prefWidth="82.0" text="Time execute">
-               <font>
-                  <Font size="14.0" />
-               </font>
                <VBox.margin>
                   <Insets left="5.0" />
                </VBox.margin>
@@ -53,13 +47,13 @@
       <VBox prefHeight="100.0" prefWidth="76.0" BorderPane.alignment="CENTER">
          <children>
             <Region prefHeight="17.0" prefWidth="100.0" />
-            <Button fx:id="btnOkey" mnemonicParsing="false" text="Okey">
+            <Button fx:id="btnOkey" mnemonicParsing="false" onAction="#handleOk" text="Add">
                <VBox.margin>
                   <Insets left="10.0" />
                </VBox.margin>
             </Button>
             <Region layoutX="10.0" layoutY="10.0" prefHeight="17.0" prefWidth="100.0" />
-            <Button fx:id="btnCancel" cancelButton="true" mnemonicParsing="false" onAction="#actionCancel" text="Cancel">
+            <Button fx:id="btnCancel" cancelButton="true" mnemonicParsing="false" onAction="#handleCancel" text="Cancel">
                <VBox.margin>
                   <Insets left="10.0" />
                </VBox.margin>
