--- a/src/main/resources/fxml/addTask.fxml
+++ b/src/main/resources/fxml/addTask.fxml
@@ -47,7 +47,7 @@
       <VBox prefHeight="100.0" prefWidth="76.0" BorderPane.alignment="CENTER">
          <children>
             <Region prefHeight="17.0" prefWidth="100.0" />
-            <Button fx:id="btnOkey" mnemonicParsing="false" onAction="#handleOk" text="Add">
+            <Button fx:id="btnOkey" defaultButton="true" mnemonicParsing="false" onAction="#handleOk" prefHeight="25.0" prefWidth="52.0" text="Add">
                <VBox.margin>
                   <Insets left="10.0" />
                </VBox.margin>
