--- a/src/main/resources/fxml/addTask.fxml
+++ b/src/main/resources/fxml/addTask.fxml
@@ -6,20 +6,20 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="240.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="live.daniel.TaskManager.controllers.addTask">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="106.0" prefWidth="222.0" stylesheets="@../css/mainForm.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="live.daniel.TaskManager.controllers.addTask">
    <left>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
             <Region prefHeight="19.0" prefWidth="100.0" />
             <Label text="Time activation">
                <VBox.margin>
-                  <Insets left="5.0" />
+                  <Insets left="5.0" top="5.0" />
                </VBox.margin>
             </Label>
             <Region layoutX="10.0" layoutY="10.0" prefHeight="22.0" prefWidth="100.0" />
             <Label prefHeight="20.0" prefWidth="82.0" text="Time execute">
                <VBox.margin>
-                  <Insets left="5.0" />
+                  <Insets left="5.0" top="5.0" />
                </VBox.margin>
             </Label>
          </children>
@@ -29,15 +29,15 @@
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
             <Region prefHeight="17.0" prefWidth="100.0" />
-            <TextField fx:id="timeActivation" prefHeight="25.0" prefWidth="16.0">
+            <TextField fx:id="timeActivation" prefHeight="31.0" prefWidth="28.0">
                <VBox.margin>
-                  <Insets left="5.0" right="5.0" />
+                  <Insets left="5.0" right="10.0" />
                </VBox.margin>
             </TextField>
             <Region layoutX="10.0" layoutY="10.0" prefHeight="17.0" prefWidth="100.0" />
-            <TextField fx:id="timeExecute" prefHeight="25.0" prefWidth="67.0">
+            <TextField fx:id="timeExecute" prefHeight="30.0" prefWidth="25.0">
                <VBox.margin>
-                  <Insets left="5.0" right="5.0" />
+                  <Insets left="5.0" right="10.0" />
                </VBox.margin>
             </TextField>
          </children>
@@ -47,15 +47,15 @@
       <VBox prefHeight="100.0" prefWidth="76.0" BorderPane.alignment="CENTER">
          <children>
             <Region prefHeight="17.0" prefWidth="100.0" />
-            <Button fx:id="btnOkey" defaultButton="true" mnemonicParsing="false" onAction="#handleOk" prefHeight="25.0" prefWidth="52.0" text="Add">
+            <Button fx:id="btnOkey" defaultButton="true" mnemonicParsing="false" onAction="#handleOk" prefHeight="31.0" prefWidth="98.0" text="Add">
                <VBox.margin>
-                  <Insets left="10.0" />
+                  <Insets />
                </VBox.margin>
             </Button>
             <Region layoutX="10.0" layoutY="10.0" prefHeight="17.0" prefWidth="100.0" />
-            <Button fx:id="btnCancel" cancelButton="true" mnemonicParsing="false" onAction="#handleCancel" text="Cancel">
+            <Button fx:id="btnCancel" cancelButton="true" mnemonicParsing="false" onAction="#handleCancel" prefHeight="31.0" prefWidth="79.0" text="Cancel">
                <VBox.margin>
-                  <Insets left="10.0" />
+                  <Insets />
                </VBox.margin>
             </Button>
          </children>
