--- a/src/main/resources/fxml/setProcessor.fxml
+++ b/src/main/resources/fxml/setProcessor.fxml
@@ -5,25 +5,25 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="240.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="live.daniel.TaskManager.controllers.setProcessor">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="252.0" stylesheets="@../css/mainForm.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="live.daniel.TaskManager.controllers.setProcessor">
    <center>
-      <TextField fx:id="countProcessor" BorderPane.alignment="CENTER">
+      <TextField fx:id="countProcessor" prefHeight="31.0" prefWidth="33.0" BorderPane.alignment="CENTER">
          <BorderPane.margin>
-            <Insets left="10.0" right="20.0" />
+            <Insets left="10.0" right="10.0" />
          </BorderPane.margin>
       </TextField>
    </center>
    <right>
-      <Button fx:id="btnSet" defaultButton="true" mnemonicParsing="false" onAction="#setCountProcessor" prefHeight="25.0" prefWidth="60.0" text="Set" BorderPane.alignment="CENTER">
+      <Button fx:id="btnSet" defaultButton="true" mnemonicParsing="false" onAction="#setCountProcessor" prefHeight="31.0" prefWidth="80.0" text="Set" BorderPane.alignment="CENTER">
          <BorderPane.margin>
-            <Insets right="10.0" />
+            <Insets left="5.0" />
          </BorderPane.margin>
       </Button>
    </right>
    <left>
       <Label text="Count processor" BorderPane.alignment="CENTER">
          <BorderPane.margin>
-            <Insets left="10.0" />
+            <Insets left="10.0" right="10.0" />
          </BorderPane.margin>
       </Label>
    </left>
