--- a/src/main/resources/fxml/mainForm.fxml
+++ b/src/main/resources/fxml/mainForm.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.effect.*?>
-<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -12,11 +7,14 @@
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="424.0" prefWidth="735.0" stylesheets="@../css/mainForm.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="live.daniel.TaskManager.controllers.mainForm">
    <top>
       <VBox BorderPane.alignment="CENTER">
+         <!--suppress JavaFxDefaultTag -->
          <children>
             <MenuBar>
-              <menus>
+              <!--suppress JavaFxDefaultTag -->
+               <menus>
                 <Menu mnemonicParsing="false" text="Settings">
-                  <items>
+                  <!--suppress JavaFxDefaultTag -->
+                   <items>
                     <MenuItem mnemonicParsing="false" onAction="#setCountProcessor" text="Set count processor" />
                     <MenuItem mnemonicParsing="false" onAction="#exitProgram" text="Exit" />
                   </items>
@@ -27,7 +25,9 @@
                </VBox.margin>
             </MenuBar>
             <HBox spacing="10.0">
+               <!--suppress JavaFxDefaultTag -->
                <children>
+                  <!--suppress JavaFxUnresolvedFxIdReference -->
                   <Button fx:id="updateList" mnemonicParsing="false" onAction="#setTreeView" style="-fx-background-radius: 20;" text="♻" textFill="#4d4c4c">
                      <HBox.margin>
                         <Insets />
@@ -60,6 +60,7 @@
    </left>
    <bottom>
       <HBox BorderPane.alignment="CENTER">
+         <!--suppress JavaFxDefaultTag -->
          <children>
             <Label fx:id="countTasks" text="Count task: 0" />
          </children>
